cabal-version:      3.0
name:               hgg-pdf
version:            0.1.0.0
synopsis:           PDF backend for hgg (HPDF)
description:
  ベクタ PDF backend (Phase 17)。 plot-core の [Primitive] を HPDF
  (Graphics.PDF、 純 Haskell・BSD-3) の Draw 命令に解釈する (SVG backend と
  同じ Layer 1 構図)。 v1 は PDF 標準 14 フォント (Latin) のみ —
  日本語ラベルは hgg-rasterific (PNG + TrueType) が受け皿。
license:            BSD-3-Clause
license-file:       LICENSE
author:             frenzieddoll
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Hgg
category:           Graphics
build-type:         Simple

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Hgg.Plot.Backend.PDF
  hs-source-dirs:   src
  build-depends:    base               >= 4.17 && < 5
                  , text               >= 2.0  && < 2.2
                  , HPDF               >= 1.7  && < 1.9
                  , hgg-core  ^>= 0.1
                  , hgg-frame ^>= 0.1
  default-language: Haskell2010

test-suite hgg-pdf-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:    base
                  , bytestring
                  , directory
                  , filepath
                  , hspec              >= 2.10 && < 2.12
                  , text
                  , hgg-core
                  , hgg-pdf
