cabal-version:      3.0
name:               hgg-pdf
version:            0.1.0.0
extra-doc-files:    CHANGELOG.md
synopsis:           PDF backend for hgg (HPDF)
description:
  Vector PDF backend for hgg. Interprets the [Primitive] list from
  hgg-core into HPDF (Graphics.PDF, pure Haskell, BSD-3) drawing
  commands, in the same single-pass architecture as the SVG backend.
  Currently limited to the 14 standard PDF fonts (Latin only); for CJK
  labels use hgg-rasterific (PNG + TrueType) instead.
license:            BSD-3-Clause
homepage:           https://github.com/frenzieddoll/hgg
license-file:       LICENSE
author:             Toshiaki Honda
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Aelysce Project (Toshiaki Honda)
category:           Graphics
build-type:         Simple

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Hgg.Plot.Backend.PDF
  hs-source-dirs:   src
  build-depends:    base               >= 4.17 && < 5
                  , text               >= 2.0  && < 2.2
                  , HPDF               >= 1.7  && < 1.9
                  , hgg-core  ^>= 0.1
                  , hgg-frame ^>= 0.1
  default-language: Haskell2010

test-suite hgg-pdf-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:    base
                  , bytestring
                  , directory
                  , filepath
                  , hspec              >= 2.10 && < 2.12
                  , text
                  , hgg-core
                  , hgg-pdf
