cabal-version:      3.0
name:               hgg-rasterific
version:            0.1.0.0
synopsis:           PNG backend for hgg (Rasterific + JuicyPixels)
description:
  raster PNG backend (Phase 22)。 plot-core の [Primitive] を Rasterific
  (純 Haskell rasterizer・BSD-3) の Drawing 命令に解釈し JuicyPixels で
  PNG エンコードする (SVG/PDF backend と同じ Layer 1 構図)。 フォントは
  FontyFruity の TrueType 読込 = 日本語ラベル対応 (PDF v1 制約の受け皿)。
license:            BSD-3-Clause
license-file:       LICENSE
author:             frenzieddoll
maintainer:         frenzieddoll@gmail.com
copyright:          2026 Hgg
category:           Graphics
build-type:         Simple

common warnings
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields
                      -Wredundant-constraints

library
  import:           warnings
  exposed-modules:  Hgg.Plot.Backend.Rasterific
  hs-source-dirs:   src
  build-depends:    base               >= 4.17 && < 5
                  , directory          >= 1.3  && < 1.4
                  , filepath           >= 1.4  && < 1.6
                  , text               >= 2.0  && < 2.2
                  , FontyFruity        >= 0.5.3 && < 0.6
                  , JuicyPixels        >= 3.3  && < 3.4
                  , Rasterific         >= 0.7.5 && < 0.8
                  , hgg-core  ^>= 0.1
                  , hgg-frame ^>= 0.1
  default-language: Haskell2010

test-suite hgg-rasterific-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: Haskell2010
  build-depends:    base
                  , bytestring
                  , directory
                  , filepath
                  , hspec              >= 2.10 && < 2.12
                  , text
                  , FontyFruity
                  , JuicyPixels
                  , hgg-core
                  , hgg-rasterific
